--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A schedule rebalancer",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha **/*.test.js"
   },
   "repository": {
     "type": "git",
